# small_bevy_game

./: Cargo.toml  LICENSE-MIT  clippy.toml  rustfmt.toml
.cargo/: config.toml
assets/: slash.webp~  test.ldtk
src/: animation.rs  fow.rs  main.rs  util.rs
src/gameplay/: abilities.rs  enemy.rs  mod.rs  player.rs
